CSS responsive bugfix and send button transformations elimination

--- a/default.css
+++ b/default.css
@@ -749,6 +749,12 @@ h6 {
     }
 }
 
+@media screen and (max-width: 450px) {
+    .greeting-wrapper h1 {
+        word-spacing: 9999px;
+    }
+}
+
 @media screen and (max-width: 400px) {
     #preview-shadow {
         max-width: 280px;
@@ -763,327 +769,6 @@ h6 {
 
     .flow {
         min-height: 640px !important;
-    }
-}
-
-/* Send button transformations */
-@-moz-keyframes flyaway {
-    0% {
-        -webkit-transform: rotate(10deg);
-        -moz-transform: rotate(10deg);
-        -o-transform: rotate(10deg);
-        -ms-transform: rotate(10deg);
-        transform: rotate(10deg);
-        top: 13px;
-        right: 25px;
-        height: 30px;
-    }
-
-    5% {
-        -webkit-transform: rotate(10deg);
-        -moz-transform: rotate(10deg);
-        -o-transform: rotate(10deg);
-        -ms-transform: rotate(10deg);
-        transform: rotate(10deg);
-        top: 13px;
-        right: 0px;
-        height: 30px;
-    }
-
-    20% {
-        -webkit-transform: rotate(-20deg);
-        -moz-transform: rotate(-20deg);
-        -o-transform: rotate(-20deg);
-        -ms-transform: rotate(-20deg);
-        transform: rotate(-20deg);
-        top: 13px;
-        right: -130px;
-        height: 45px;
-    }
-
-    40% {
-        -webkit-transform: rotate(10deg);
-        -moz-transform: rotate(10deg);
-        -o-transform: rotate(10deg);
-        -ms-transform: rotate(10deg);
-        transform: rotate(10deg);
-        top: -40px;
-        right: -280px;
-        opacity: 1;
-        -ms-filter: none;
-        filter: none;
-    }
-
-    100% {
-        -webkit-transform: rotate(60deg);
-        -moz-transform: rotate(60deg);
-        -o-transform: rotate(60deg);
-        -ms-transform: rotate(60deg);
-        transform: rotate(60deg);
-        top: -200px;
-        right: -1000px;
-        height: 0;
-        opacity: 0;
-        -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-        filter: alpha(opacity=0);
-    }
-}
-
-@-webkit-keyframes flyaway {
-    0% {
-        -webkit-transform: rotate(10deg);
-        -moz-transform: rotate(10deg);
-        -o-transform: rotate(10deg);
-        -ms-transform: rotate(10deg);
-        transform: rotate(10deg);
-        top: 13px;
-        right: 25px;
-        height: 30px;
-    }
-
-    5% {
-        -webkit-transform: rotate(10deg);
-        -moz-transform: rotate(10deg);
-        -o-transform: rotate(10deg);
-        -ms-transform: rotate(10deg);
-        transform: rotate(10deg);
-        top: 13px;
-        right: 0px;
-        height: 30px;
-    }
-
-    20% {
-        -webkit-transform: rotate(-20deg);
-        -moz-transform: rotate(-20deg);
-        -o-transform: rotate(-20deg);
-        -ms-transform: rotate(-20deg);
-        transform: rotate(-20deg);
-        top: 13px;
-        right: -130px;
-        height: 45px;
-    }
-
-    40% {
-        -webkit-transform: rotate(10deg);
-        -moz-transform: rotate(10deg);
-        -o-transform: rotate(10deg);
-        -ms-transform: rotate(10deg);
-        transform: rotate(10deg);
-        top: -40px;
-        right: -280px;
-        opacity: 1;
-        -ms-filter: none;
-        filter: none;
-    }
-
-    100% {
-        -webkit-transform: rotate(60deg);
-        -moz-transform: rotate(60deg);
-        -o-transform: rotate(60deg);
-        -ms-transform: rotate(60deg);
-        transform: rotate(60deg);
-        top: -200px;
-        right: -1000px;
-        height: 0;
-        opacity: 0;
-        -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-        filter: alpha(opacity=0);
-    }
-}
-
-@-o-keyframes flyaway {
-    0% {
-        -webkit-transform: rotate(10deg);
-        -moz-transform: rotate(10deg);
-        -o-transform: rotate(10deg);
-        -ms-transform: rotate(10deg);
-        transform: rotate(10deg);
-        top: 13px;
-        right: 25px;
-        height: 30px;
-    }
-
-    5% {
-        -webkit-transform: rotate(10deg);
-        -moz-transform: rotate(10deg);
-        -o-transform: rotate(10deg);
-        -ms-transform: rotate(10deg);
-        transform: rotate(10deg);
-        top: 13px;
-        right: 0px;
-        height: 30px;
-    }
-
-    20% {
-        -webkit-transform: rotate(-20deg);
-        -moz-transform: rotate(-20deg);
-        -o-transform: rotate(-20deg);
-        -ms-transform: rotate(-20deg);
-        transform: rotate(-20deg);
-        top: 13px;
-        right: -130px;
-        height: 45px;
-    }
-
-    40% {
-        -webkit-transform: rotate(10deg);
-        -moz-transform: rotate(10deg);
-        -o-transform: rotate(10deg);
-        -ms-transform: rotate(10deg);
-        transform: rotate(10deg);
-        top: -40px;
-        right: -280px;
-        opacity: 1;
-        -ms-filter: none;
-        filter: none;
-    }
-
-    100% {
-        -webkit-transform: rotate(60deg);
-        -moz-transform: rotate(60deg);
-        -o-transform: rotate(60deg);
-        -ms-transform: rotate(60deg);
-        transform: rotate(60deg);
-        top: -200px;
-        right: -1000px;
-        height: 0;
-        opacity: 0;
-        -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-        filter: alpha(opacity=0);
-    }
-}
-
-@keyframes flyaway {
-    0% {
-        -webkit-transform: rotate(10deg);
-        -moz-transform: rotate(10deg);
-        -o-transform: rotate(10deg);
-        -ms-transform: rotate(10deg);
-        transform: rotate(10deg);
-        top: 13px;
-        right: 25px;
-        height: 30px;
-    }
-
-    5% {
-        -webkit-transform: rotate(10deg);
-        -moz-transform: rotate(10deg);
-        -o-transform: rotate(10deg);
-        -ms-transform: rotate(10deg);
-        transform: rotate(10deg);
-        top: 13px;
-        right: 0px;
-        height: 30px;
-    }
-
-    20% {
-        -webkit-transform: rotate(-20deg);
-        -moz-transform: rotate(-20deg);
-        -o-transform: rotate(-20deg);
-        -ms-transform: rotate(-20deg);
-        transform: rotate(-20deg);
-        top: 13px;
-        right: -130px;
-        height: 45px;
-    }
-
-    40% {
-        -webkit-transform: rotate(10deg);
-        -moz-transform: rotate(10deg);
-        -o-transform: rotate(10deg);
-        -ms-transform: rotate(10deg);
-        transform: rotate(10deg);
-        top: -40px;
-        right: -280px;
-        opacity: 1;
-        -ms-filter: none;
-        filter: none;
-    }
-
-    100% {
-        -webkit-transform: rotate(60deg);
-        -moz-transform: rotate(60deg);
-        -o-transform: rotate(60deg);
-        -ms-transform: rotate(60deg);
-        transform: rotate(60deg);
-        top: -200px;
-        right: -1000px;
-        height: 0;
-        opacity: 0;
-        -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-        filter: alpha(opacity=0);
-    }
-}
-
-@-moz-keyframes bounce-in {
-    0% {
-        padding-right: 30px;
-    }
-
-    40% {
-        padding-right: 6px;
-    }
-
-    50% {
-        padding-left: 30px;
-    }
-
-    100% {
-        padding-left: 6px;
-    }
-}
-
-@-webkit-keyframes bounce-in {
-    0% {
-        padding-right: 30px;
-    }
-
-    40% {
-        padding-right: 6px;
-    }
-
-    50% {
-        padding-left: 30px;
-    }
-
-    100% {
-        padding-left: 6px;
-    }
-}
-
-@-o-keyframes bounce-in {
-    0% {
-        padding-right: 30px;
-    }
-
-    40% {
-        padding-right: 6px;
-    }
-
-    50% {
-        padding-left: 30px;
-    }
-
-    100% {
-        padding-left: 6px;
-    }
-}
-
-@keyframes bounce-in {
-    0% {
-        padding-right: 30px;
-    }
-
-    40% {
-        padding-right: 6px;
-    }
-
-    50% {
-        padding-left: 30px;
-    }
-
-    100% {
-        padding-left: 6px;
     }
 }
 
